# django_sass

./: Makefile  pyproject.toml
config/: settings.py
main/templates/main/: base.html  home.html
static/scss/: main.scss
staticfiles/scss/: main.css  main.css.map  main.scss
